# opencv_flutter_ffi

./: .gitignore  LICENSE.md  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/opencv_flutter_ffi/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: livecamera.dart  main.dart
lib/opencv-cpp/: gaussian.cpp  image_ffi.cpp  main.cpp
test/: widget_test.dart
web/: index.html  manifest.json
